# my_rest_api

./: .env  .gitignore  Cargo.toml
src/: db.rs  main.rs  models.rs
tests/: db_books.rs  db_users.rs
