[package]
name = "my_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0.0-beta.8"
async-std = { version = "1.10.0", features = ["attributes"] }
tide = "0.16.0"
actix-rt = "2.2.0"
sqlx = { version = "0.5.5", features = ["postgres", "runtime-actix-rustls"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
my_rest_api = { path = "." }

[lib]
name = "my_rest_api"
path = "src/main.rs"